--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,4 +19,29 @@ spring:
 server:
   port: 8088
 
+
+  # Log4j configuration
+logging:
+  level:
+    root: INFO
+  file:
+    name: logs/app.log
+  pattern:
+    file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
+  loggers:
+    file:
+      name: FILE
+  appenders:
+    file:
+      type: File
+      name: FILE
+      fileName: "${user.dir}/logs/app.log"
+      pattern: "${logging.pattern.file}"
+    console:
+      type: Console
+      name: STDOUT
+      layout:
+        pattern: "${logging.pattern.console}"
+
   
