--- a/pom.xml
+++ b/pom.xml
@@ -73,13 +73,24 @@
     <version>42.7.3</version>
      </dependency>
 
-        <!-- Java EE -
         <dependency>
     <groupId>javax.inject</groupId>
     <artifactId>javax.inject</artifactId>
     <version>1</version>
 </dependency>
--->
+
+
+            <!-- Log4j -->
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-api</artifactId>
+    <version>2.14.1</version>
+</dependency>
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+    <version>2.14.1</version>
+</dependency>
 
 <dependency>
     <groupId>org.springframework.boot</groupId>
